# videolex-backand-rust

./: .gitignore  Cargo.toml  README.md  build.rs  dev-deploy.sh  main.tf
main/: Cargo.toml  build.rs
main/src/: ai.rs  axum.rs  axum_entry.rs  axum_router.rs  domain.rs  endpoints.rs  grpc.rs  grpc_services.rs  http_handler.rs  lambda.rs  lambda_entry.rs
main/src/protos/: model.proto
map_to_axum_macro/: Cargo.toml
map_to_axum_macro/src/: lib.rs
src/: axum.rs  grpc.rs  http_handler.rs  lambda.rs
