[package]
name = "videolex-backand-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.17.0"
axum = "0.8.4"
prost = "0.14.1"
tokio = "1.47.1"
serde = "1.0.219"
tower = "0.5.2"
http = "1.2.0"
axum-core = "0.5.2"
bytes = "1.9.0"
anyhow = "1.0.99"
async-openai = "0.29.3"


utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_json = "1.0.143"



[build-dependencies]
prost-build = "0.14.1"


tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "lambda"
path = "src/lambda_entry.rs"

[[bin]]
name = "axum"
path = "src/axum_entry.rs"
